<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/preference_category_logging" >
            
    <CheckBoxPreference
            android:key="preference_log"
            android:title="@string/preference_log_title"
            android:defaultValue="@string/preference_log_default"             
            android:summary="@string/preference_log_summary"/>
            
    <EditTextPreference
    		android:key="preference_log_name"            
            android:title="@string/preference_log_name_title"
            android:defaultValue="@string/preference_log_name_default"
            android:summary="@string/preference_log_name_summary"
            android:dependency="preference_log" />
                        
    </PreferenceCategory>    
    <PreferenceCategory
    		android:title="@string/preference_category_notify" >   
        
    <CheckBoxPreference
            android:key="preference_monitor"
            android:title="@string/preference_monitor_title"
            android:defaultValue="@string/preference_monitor_default"             
            android:summary="@string/preference_monitor_summary"/> 
                                   
    <ListPreference
            android:key="preference_monitor_type"            
            android:title="@string/preference_monitor_type_title"
            android:defaultValue="@string/preference_monitor_type_default"
            android:summary="@string/preference_monitor_type_summary"
            android:entries="@array/preference_monitor_type_options"
            android:entryValues="@array/preference_monitor_type_values"
            android:dialogTitle="@string/preference_monitor_type_dialog_title" 
            android:dependency="preference_monitor" />
    
    </PreferenceCategory>    
    <PreferenceCategory
    		android:title="@string/preference_category_tools" >   
    		        
    <EditTextPreference
    		android:key="preference_ping_host"
    		android:title="@string/preference_ping_host_title"
    		android:defaultValue="@string/preference_ping_host_default"
    		android:summary="@string/preference_ping_host_summary" />    		

    <EditTextPreference
    		android:key="preference_ping_host_port"
    		android:title="@string/preference_ping_host_port_title"
    		android:defaultValue="@string/preference_ping_host_port_default"
    		android:summary="@string/preference_ping_host_port_summary" />
    		
    </PreferenceCategory>        
    <PreferenceCategory
    		android:title="@string/preference_category_other" >   
    		
    <CheckBoxPreference
            android:key="preference_first_run"
            android:title="@string/preference_first_run_title"
            android:defaultValue="@string/preference_first_run_default"             
            android:summary="@string/preference_first_run_summary"/>
    
    </PreferenceCategory>   
</PreferenceScreen>