<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/netmon_tools"
          android:icon="@android:drawable/ic_menu_manage"
          android:title="@string/tools_menu_lable" />
    <item android:id="@+id/preferences"
    	  android:icon="@android:drawable/ic_menu_preferences"
          android:title="@string/preferences_menu_lable" />
    <item android:id="@+id/show_log"
    	  android:icon="@android:drawable/ic_menu_view"
    	  android:title="@string/show_log_title" />
    <item android:id="@+id/clear_log"
    	  android:icon="@android:drawable/ic_menu_close_clear_cancel"
    	  android:title="@string/clear_log_title" />
    <item android:id="@+id/about_network_monitor"
    	  android:icon="@android:drawable/ic_menu_info_details"
    	  android:title="@string/about_network_monitor_menu_title" />
</menu>